# sept-rs

./: .gitignore  Cargo.toml  Makefile  README.md
doc/: to-dos.md
sept/: Cargo.toml  Makefile
sept-cat/: Cargo.toml
sept-cat/src/: main.rs
sept-gui/: Cargo.toml  README.md  notes.md
sept-gui/src/: ansi_color.rs  app.rs  lib.rs  main.rs  view.rs  view_ctx.rs  view_ctx_guard.rs  view_ctx_nesting_guard.rs  view_ctx_ta_guard.rs
sept/doc/: notes.md  to-dos.md
sept/doc/exploratory/: diff-and-merge.md  sept-data-model.md  type-inhabitation.md
sept/src/: dag.rs  lib.rs  parser.rs  poset.rs  scan.rs  scanner.rs
sept/src/dy/: array_term.rs  constructor.rs  deconstruct.rs  deconstruction.rs  detextify.rs  dyn_np_term.rs  global_sym_ref_term.rs  global_symbol_table.rs  into_value.rs  local_sym_ref_term.rs  mod.rs  non_parametric_deconstruction.rs  non_parametric_term_code.rs  parametric_deconstruction.rs  runtime.rs  struct_term.rs  struct_term_term.rs  symbol_table.rs  terminal_deconstruction.rs  transparent_ref_trait.rs  tuple_term.rs  value.rs
sept/src/parser/: expr.rs  expr_sequence.rs  mod.rs  parse.rs  terminal.rs  tuple_expr.rs
sept/src/scanner/: mod.rs  token.rs
sept/src/st/: array.rs  array_type.rs  bool.rs  bool_term.rs  bool_type.rs  deserializable.rs  empty_type.rs  false.rs  false_type.rs  float.rs  float_term.rs  float_type.rs  global_sym_ref.rs  global_sym_ref_type.rs  int.rs  int_term.rs  int_type.rs  local_sym_ref.rs  local_sym_ref_type.rs  mod.rs  non_parametric_term_code.rs  non_parametric_term_trait.rs  serializable.rs  stringifiable.rs  stringify_trait.rs  struct.rs  struct_type.rs  term.rs  term_trait.rs  test_values.rs  true.rs  true_type.rs  tuple.rs  tuple_type.rs  type.rs  type_trait.rs  utf8_string.rs  utf8_string_term.rs  utf8_string_type.rs  void.rs  (+1 more)
sept/tests/: all.rs  sept_tests.rs
sept_derive/: Cargo.toml  Makefile  README.md
sept_derive/src/: lib.rs
sept_derive_tests/: Cargo.toml  Makefile  README.md
sept_derive_tests/src/: lib.rs
src/: array.rs  array_term.rs  array_type.rs  bool.rs  bool_term.rs  bool_type.rs  dag.rs  dyn_np_term.rs  empty_type.rs  false.rs  false_type.rs  float.rs  float_term.rs  float_type.rs  inhabits_trait.rs  int.rs  int_term.rs  int_type.rs  lib.rs  non_parametric_term_trait.rs  poset.rs  runtime.rs  term.rs  term_trait.rs  true.rs  true_type.rs  tuple.rs  tuple_term.rs  tuple_type.rs  type.rs  type_trait.rs  value.rs  void.rs  void_type.rs
src/dy/: array_term.rs  dyn_np_term.rs  global_sym_ref_term.rs  global_sym_ref_term_read_guard.rs  global_sym_ref_term_write_guard.rs  global_symbol_table.rs  local_sym_ref_term.rs  mod.rs  runtime.rs  struct_term.rs  struct_term_term.rs  symbol_table.rs  tuple_term.rs  value.rs
src/st/: array.rs  array_type.rs  bool.rs  bool_term.rs  bool_type.rs  empty_type.rs  false.rs  false_type.rs  float.rs  float_term.rs  float_type.rs  global_sym_ref.rs  global_sym_ref_type.rs  inhabits_trait.rs  int.rs  int_term.rs  int_type.rs  local_sym_ref.rs  mod.rs  stringify_trait.rs  struct.rs  struct_type.rs  term.rs  term_trait.rs  true.rs  true_type.rs  tuple.rs  tuple_type.rs  type.rs  type_trait.rs  void.rs  void_type.rs
tests/: all.rs
