[package]
name = "sept-cat"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = { version = "3.1", features = ["derive", "env"] }
env_logger = "0.8.4"
log = "0.4"
sept = { path = "../sept" }
