[package]
name = "sept"
version = "0.0.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: features, such as textify, detextify, serialize, deserialize.

[dependencies]
anyhow = "1.0.44"
bind_match = "0.1.2"
derive_more = "0.99.17"
enum-map = "2.0.0"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.5.4"
sept_derive = { path = "../sept_derive" }

[dev-dependencies]
anyhow = { version = "1.0.44", features = ["backtrace"] }
ctor = "0.1.21"
env_logger = "0.8.4"
serial_test = "0.5.1"
