[package]
name = "sept_derive_tests"
version = "0.0.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.44", features = ["backtrace"] }
ctor = "0.1.21"
env_logger = "0.8.4"
log = "0.4.14"
sept = { path = "../sept" }
serial_test = "0.5.1"
